--- a/index.html
+++ b/index.html
@@ -1,16 +1,81 @@
 
+
 <!DOCTYPE html>
-<html>
+<html class='v2' dir='ltr' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
 <head>
+<link href='https://www.blogger.com/static/v1/widgets/2437439463-css_bundle_v2.css' rel='stylesheet' type='text/css'/>
+<meta content='width=1100' name='viewport'/>
+<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+<!--[if IE]><script type="text/javascript" src="https://www.blogger.com/static/v1/jsbin/3658603751-ieretrofit.js"></script>
+<![endif]-->
+<meta content='Shortener' property='og:title'/>
+<meta content='' property='og:description'/>
+<!--[if IE]> <script> (function() { var html5 = ("abbr,article,aside,audio,canvas,datalist,details," + "figure,footer,header,hgroup,mark,menu,meter,nav,output," + "progress,section,time,video").split(','); for (var i = 0; i < html5.length; i++) { document.createElement(html5[i]); } try { document.execCommand('BackgroundImageCache', false, true); } catch(e) {} })(); </script> <![endif]-->
+<title>Shortener</title>
+<style id='page-skin-1' type='text/css'><!--
+/*
+----------------------------------------------- */
 
- <title>SEMUT| FB Debug!</title>
+</style>
+<link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=267759181978607440&amp;zx=739af88d-6366-4ea1-95a8-1d6ab046a059' media='none' onload='if(media!=&#39;all&#39;)media=&#39;all&#39;' rel='stylesheet'/><noscript><link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=267759181978607440&amp;zx=739af88d-6366-4ea1-95a8-1d6ab046a059' rel='stylesheet'/></noscript>
 
- <script src="https://apis.google.com/js/client.js" type="text/javascript">
- </script>
-<link rel="openid.server" href="https://www.blogger.com/openid-server.g" />
+<link rel="me" href="https://www.blogger.com/profile/17558586336698818343" />
+<!-- --><style type="text/css">@import url(//www.blogger.com/static/v1/v-css/navbar/3334278262-classic.css);
+div.b-mobile {display:none;}
+</style>
+
 </head>
+<body class='loading'><script type="text/javascript">
+    function setAttributeOnload(object, attribute, val) {
+      if(window.addEventListener) {
+        window.addEventListener('load',
+          function(){ object[attribute] = val; }, false);
+      } else {
+        window.attachEvent('onload', function(){ object[attribute] = val; });
+      }
+    }
+  </script>
+<div id="navbar-iframe-container"></div>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+<script type="text/javascript">
+      gapi.load("gapi.iframes:gapi.iframes.style.bubble", function() {
+        if (gapi.iframes && gapi.iframes.getContext) {
+          gapi.iframes.getContext().openChild({
+              url: 'https://www.blogger.com/navbar.g?targetBlogID\x3d7830282689332423459\x26blogName\x3dURL+Shortener\x26publishMode\x3dPUBLISH_MODE_BLOGSPOT\x26navbarType\x3dBLUE\x26layoutType\x3dCLASSIC\x26searchRoot\x3dhttps://abeeclub.blogspot.com/search\x26blogLocale\x3den\x26v\x3d2\x26homepageUrl\x3dhttps://abeeclub.blogspot.com/\x26vt\x3d4835259891070550092',
+              where: document.getElementById("navbar-iframe-container"),
+              id: "navbar-iframe"
+          });
+        }
+      });
+    </script>
+<div class='navbar section' id='navbar' name='Navbar'><div class='widget Navbar' data-version='1' id='Navbar1'><script type="text/javascript">
+    function setAttributeOnload(object, attribute, val) {
+      if(window.addEventListener) {
+        window.addEventListener('load',
+          function(){ object[attribute] = val; }, false);
+      } else {
+        window.attachEvent('onload', function(){ object[attribute] = val; });
+      }
+    }
+  </script>
+<script type="text/javascript">
+(function() {
+var script = document.createElement('script');
+script.type = 'text/javascript';
+script.src = '//pagead2.googlesyndication.com/pagead/js/google_top_exp.js';
+var head = document.getElementsByTagName('head')[0];
+if (head) {
+head.appendChild(script);
+}})();
+</script>
+</div></div>
+<html><head>
 
- <style type="text/css">
+ <title>Shortener!</title>
+ <script src="https://apis.google.com/_/scs/apps-static/_/js/k=oz.gapi.en_US.XKTeUOz12q0.O/m=client/rt=j/sv=1/d=1/ed=1/am=AQ/rs=AGLTcCP4sqCpsMFrnkAS1D-fz9HyKnFPQg/cb=gapi.loaded_0" async=""></script><script src="https://apis.google.com/js/client.js" type="text/javascript" gapi_processed="true">
+ </script>
+<link rel="openid.server" href="https://www.blogger.com/openid-server.g">
+<style type="text/css">
  /*<![CDATA[*/
 
  html { 
@@ -33,8 +98,7 @@ box-sizing: border-box;
 
 }
 div.grond {
-background-image: url(https://s12.postimg.org/lsyqecy8d/Screenshot_1.jpg);
-width: 900px;
+width: 1100px;
 height:370px;
 padding:auto;
 margin:auto;
@@ -97,29 +161,58 @@ margin: 0;
 opacity: 1;
 transition: 0s
 }
+#navbar-iframe-container {display:none;}
 /*]]>*/
- </style>
+ </style><link rel="stylesheet" type="text/css" href="chrome-extension://immhpnclomdloikkpcefncmfgjbkojmh/css/emoji.css">
+<link rel="me" href="https://www.blogger.com/profile/03493055972363079156" />
+<!-- --><style type="text/css">@import url(//www.blogger.com/static/v1/v-css/navbar/3334278262-classic.css);
+div.b-mobile {display:none;}
+</style>
+
 </head>
-<body>
 
-
-<div class='separator' style='clear: both; text-align: center;'>
-<div class='footer' style='clear: both; text-align: center;'> <span style='color: red;'> User agent harap dimatikan | not working with user agent</div>
+<body class='loading'><script type="text/javascript">
+    function setAttributeOnload(object, attribute, val) {
+      if(window.addEventListener) {
+        window.addEventListener('load',
+          function(){ object[attribute] = val; }, false);
+      } else {
+        window.attachEvent('onload', function(){ object[attribute] = val; });
+      }
+    }
+  </script>
+<div id="navbar-iframe-container"></div>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+<script type="text/javascript">
+      gapi.load("gapi.iframes:gapi.iframes.style.bubble", function() {
+        if (gapi.iframes && gapi.iframes.getContext) {
+          gapi.iframes.getContext().openChild({
+              url: 'https://www.blogger.com/navbar.g?targetBlogID\x3d7830282689332423459\x26blogName\x3dURL+Shortener\x26publishMode\x3dPUBLISH_MODE_BLOGSPOT\x26navbarType\x3dBLUE\x26layoutType\x3dCLASSIC\x26searchRoot\x3dhttps://abeeclub.blogspot.com/search\x26blogLocale\x3den\x26v\x3d2\x26homepageUrl\x3dhttps://abeeclub.blogspot.com/\x26vt\x3d4835259891070550092',
+              where: document.getElementById("navbar-iframe-container"),
+              id: "navbar-iframe"
+          });
+        }
+      });
+    </script>
  <br>
- <br> 
- <div class="grond">
+ <br>
+ <div class='footer' style='clear: both; text-align: center;'> <span style='color: green;'> User agent harap dimatikan | not working with user agent</div>
+ <div class='separator' style='clear: both; text-align: center;'>
+MERAIH MIMPI <span style='color: red;'>akun FB </span> | Copy rigt@SENK UAB <a href='https://l.facebook.com/l.php?u=https://goo.gl/ooqToR&h=qTfLM6nIZVEd1VWK4Bwha0H&s=1'>SING DUWE</a></div>
+ <br>
+  <div class="grond">
   <br>
   <div class="container">
-   <div style="background-color: hsla(354, 100%, 0%, 0.38); border-radius: 10px; border: 1px solid #ccc; border: 1px solid gray;">
-    <input class="fon" id="Mboh" placeholder="---LINK CPA---" type="text" value=""> <button class="button" id="sot" name="Submit" type="text">Getno..!</button>
+   <div style="background-color: hsla(354, 100%, 0%, 0.38); border-radius: 0px; border: 5px solid #ccc; border: 5px solid gray;">
+    <input class="fon" id="Mbohya" placeholder="--- Link CPA ---" type="text" value=""> <button class="button" id="sot" name="Submit" type="text">Short..!</button>
     <form id="randform" name="randform" onsubmit="return false">
-     <input class="fon" id="randomfield" placeholder="---COPYLINK---" readonly="readonl" type="text" value=""> <button class="button" data-copytarget="#randomfield">Ngopi</button>
+     <input class="fon" id="randomfield" placeholder="--- Copy Link ---" readonly="readonl" type="text" value=""> <button class="button" data-copytarget="#randomfield">Copy</button>
     </form>
    </div>
   </div><br>
   <div class="container">
-   <div style="background-color: hsla(354, 100%, 0%, 0.38); border-radius: 5px; border: 1px solid #ccc; border: 1px solid gray;">
-    <input class="fon" disabled="disabled" id="keyword" name="keyword" placeholder="---SHORTLINK---" readonly="readonl" type="text" value=""> <button class="button" onclick="window.open(document.getElementById('keyword').value);">Ngetest</button> <button class="button" onclick="window.open('https://developers.facebook.com/tools/debug/og/object?q=' +document.getElementById('keyword').value);">Ndebug</button>
+   <div style="background-color: hsla(354, 100%, 0%, 0.38); border-radius: 0px; border: 5px solid #ccc; border: 5px solid gray;">
+    <input class="fon" disabled="disabled" id="keyword" name="keyword" placeholder=" " readonly="readonl" type="text" value=""> <button class="button" onclick="window.open(document.getElementById('keyword').value);">Test</button> <button class="button" onclick="window.open('https://developers.facebook.com/tools/debug/og/object?q=' +document.getElementById('keyword').value);">Debug</button>
    </div>
   <script type="text/javascript">
   //<![CDATA[
@@ -151,7 +244,7 @@ transition: 0s
   //<![CDATA[
 
  function makeRequest() {
- var Url = document.getElementById("Mboh").value;
+ var Url = document.getElementById("Mbohya").value;
  var request = gapi.client.urlshortener.url.insert({
  'resource': {
  'longUrl': Url
@@ -180,7 +273,7 @@ transition: 0s
  });
  }
  function load() {
- gapi.client.setApiKey('AIzaSyANXf2-RO_7xrBk1y6l1oiX35hS6QroaM0');
+ gapi.client.setApiKey('AIzaSyBsvqNcv3__fW82JuLMTbyzlKURXmr7E9s');
  gapi.client.load('urlshortener', 'v1', function() { 
  document.getElementById("randomfield").value; });
  }
@@ -190,13 +283,22 @@ transition: 0s
  window.onload = load;
  function cc() {
  document.getElementById("randomfield").value=""
- document.getElementById("Mboh").value=""
+ document.getElementById("Mbohya").value=""
  document.getElementById("keyword").value=""
  document.getElementById("wakwaw").value=""
  }
   </script> 
+
+<script type='text/javascript'>
+    window.setTimeout(function() {
+        document.body.className = document.body.className.replace('loading', '');
+      }, 10);
+  </script>
 </body>
 </html>
-
-
-<span style='color: red;'> © 2019 GenzUAB, Inc. | By: UONK SENK UAB</div>
+  <FORM>
+<INPUT TYPE="button" onClick="history.go(0)" VALUE="Refresh">
+</FORM>
+   <div class='footer' style='clear: both; text-align: center;'> <span style='color: blue;'> © 2019 GenzUAB, Inc. | By: UONK SENK UAB</div>
+    
+    
