--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@ div.b-mobile {display:none;}
  <br>
  <br>
  <div class='footer' style='clear: both; text-align: center;'> <span style='color: green;'> User agent harap dimatikan | not working with user agent</div>
+  </div>
+   </div>
  <div class='separator' style='clear: both; text-align: center;'>
 MERAIH MIMPI <span style='color: red;'>akun FB </span> | Copy rigt@SENK UAB <a href='https://l.facebook.com/l.php?u=https://goo.gl/ooqToR&h=qTfLM6nIZVEd1VWK4Bwha0H&s=1'>SING DUWE</a></div>
  <br>
@@ -298,7 +300,9 @@ MERAIH MIMPI <span style='color: red;'>akun FB </span> | Copy rigt@SENK UAB <a h
 </html>
   <FORM>
 <INPUT TYPE="button" onClick="history.go(0)" VALUE="Refresh">
-</FORM>
+</FORM></div>
+ </div>
+  </div>
    <div class='footer' style='clear: both; text-align: center;'> <span style='color: blue;'> © 2019 GenzUAB, Inc. | By: UONK SENK UAB</div>
     
     
